# Global_Disinfection_Path_Planner

./: Description of the path planner function package.docx  README.md
Simulation Function Pack/: Path executor description document.doc  Simulation package operation instructions.docx
Simulation Function Pack/follow_waypoints/: .~lock.路径执行任务管理包使用文档.doc#  package.xml
Simulation Function Pack/follow_waypoints/launch/: follow_waypoints.launch
Simulation Function Pack/follow_waypoints/saved_path/: outputpose.csv  pose.csv
Simulation Function Pack/follow_waypoints/saved_path/Office_en_large/full_path/: pose.csv
Simulation Function Pack/follow_waypoints/saved_path/Office_en_large/indoor_path/: pose.csv
Simulation Function Pack/follow_waypoints/saved_path/WG_path/: pose.csv
Simulation Function Pack/follow_waypoints/saved_path/jackal_race_path/dense/: pose.csv
Simulation Function Pack/follow_waypoints/saved_path/jackal_race_path/light/: pose.csv
Simulation Function Pack/follow_waypoints/src/follow_waypoints/: follow_waypoints.py  mileage_tracker.py
Simulation Function Pack/slam_bot/config/: costmap_common_params.yaml
Simulation Function Pack/slam_bot/launch/: demo_slam_full.launch  demo_slam_full_backup.launch  demo_slam_full_mapping.launch  (+12 more)
The relevant documents/Disinfection points file/: default_file_name.txt
The relevant documents/Generated path file/: pose.csv
global_planning/: CMakeLists.txt  README.md  package.xml
global_planning/action/: Path_planning.action
global_planning/launch/: global_planning_client.launch  global_planning_server.launch
(+34 files in other folders)
