<package>
  <name>follow_waypoints</name>
  <version>0.1.0</version>
  <description>
      Modified for Pilot Limited floor cleaner
  </description>
  <maintainer email="garyd818@gmail.com">GD</maintainer>
  <author email="garyd818@gmail.com">GD</author>
  <license>proprietary</license>
  <url type="website"> not populated</url>
  <url type="repository"> not populated </url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
